--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os: osx
 matrix:
 install:
   - brew install qt
-  - brew link qt
+  - export PATH="/usr/local/opt/qt/bin:$PATH"
 script:
   - qmake qt-touchbar.pro
   - make
